--- a/refine/extensions/gokb/module/scripts/index/ui-open-project.html
+++ b/refine/extensions/gokb/module/scripts/index/ui-open-project.html
@@ -1,6 +1,6 @@
 <div class="relative-frame" id="gokb-index">
   <div bind="controls" class="controls">
-  	 <!-- label for="workspaces" >Platform: </label><select id="workspaces" bind="workspaces" class="workspaces"></select -->
+  	 <label for="workspaces" >Platform: </label><select id="workspaces" bind="workspaces" class="workspaces"></select>
   </div>
   <div bind="projects" class="projects"><p>There are currently no GOKb projects available for checkout.</p></div>
 </div>
